apps/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: httpbin.arq.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin-service
          servicePort: 80
  tls:
  - hosts:
    - httpbin.arq.dev
    secretName: httpbin-cert
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin-k-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: httpbin.kryptn.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin-service
          servicePort: 80
  tls:
  - hosts:
    - httpbin.kryptn.com
    secretName: httpbin-k-cert
